# foreupp

./: .gitignore  README.md  dev.bat  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
src-react/: App.tsx
src-react/components/: ColorPresetPicker.tsx  GlobalSearch.tsx  HueRingPicker.tsx
src-react/components/layout/: AppLayout.tsx  Sidebar.tsx  TitleBar.tsx
src-react/context/: AppSettingsContext.tsx  AuthContext.tsx  SpaceContext.tsx  ThemeContext.tsx
src-react/hooks/: useTranslation.ts
src-react/i18n/: translations.ts
src-react/lib/: cache.ts  firebase.ts
src-react/pages/: CalendarPage.tsx  CountdownsPage.tsx  ForgotPasswordPage.tsx  KanbanPage.tsx  LoginPage.tsx  MessengerPage.tsx  OnboardingPage.tsx  PomodoroPage.tsx  SettingsPage.tsx  SignupPage.tsx  TrackersPage.tsx
src-react/styles/: globals.css
src-react/types/: index.ts
src-react/utils/: colorUtils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src/main/: index.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  env.d.ts
src/renderer/src/components/layout/: AppLayout.tsx  Sidebar.tsx  TitleBar.tsx
src/renderer/src/context/: AuthContext.tsx  SpaceContext.tsx
src/renderer/src/lib/: firebase.ts
src/renderer/src/pages/: CalendarPage.tsx  CountdownsPage.tsx  LoginPage.tsx  OnboardingPage.tsx  SignupPage.tsx  TrackersPage.tsx
src/renderer/src/styles/: globals.css
src/renderer/src/types/: index.ts
