[package]
name = "foreUpp"
version = "0.1.0"
description = "FöreUpp – shared calendar app for two"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "fs-write-file", "dialog-save",
  "window-all",
  "shell-open"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
